test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_readln_stmt.draco
proc main() void : readln(a); corp;
