test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_hex_const_no_prefix.draco
proc main() void : a := 1234567890abcdef; corp;

